add XCache