@@ -1,16 +1,16 @@
 package xcache.em;
 
 public enum TimeUnit {
-	SECOND, MINUTE, HOUR, DAY;
+	NULL,SECOND, MINUTE, HOUR, DAY;
 	public int toSeconds(long value) {
 		if (this == SECOND) {
 			return Long.valueOf(value).intValue();
 		} else if (this == MINUTE) {
 			return Long.valueOf(value * 60).intValue();
 		} else if (this == HOUR) {
-			return Long.valueOf(value * 60 * 60).intValue();
+			return new Long(value * 60 * 60).intValue();
 		} else if (this == DAY) {
-			return Long.valueOf(value * 24 * 60 * 60).intValue();
+			return new Long(value * 24 * 60 * 60).intValue();
 		}
 		return 0;
 	}
